added lin regression function that creates and plots linear regression line

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1587,6 +1587,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import linregress\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "# Create a function to create perform linear regression on the weather data\n",
+    "# and plot a regression line and the equation with the data.\n",
+    "def plot_linear_regression(x_values, y_values, title, y_label, text_coordinates):\n",
+    "\n",
+    "    # Run regression on hemisphere weather data.\n",
+    "    (slope, intercept, r_value, p_value, std_err) = linregress(x_values, y_values)\n",
+    "\n",
+    "    # Calculate the regression line \"y values\" from the slope and intercept.\n",
+    "    regress_values = x_values * slope + intercept\n",
+    "    # Get the equation of the line.\n",
+    "    line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "    # Create a scatter plot and plot the regression line.\n",
+    "    plt.scatter(x_values,y_values)\n",
+    "    plt.plot(x_values,regress_values,\"r\")\n",
+    "    # Annotate the text for the line equation.\n",
+    "    plt.annotate(line_eq, text_coordinates, fontsize=15, color=\"red\")\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel('Latitude')\n",
+    "    plt.ylabel(y_label)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
