created northern and southern hemisphere dataframes

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1618,6 +1618,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City                    Ilulissat\n",
+       "Country                        GL\n",
+       "Date          2022-10-03 02:34:34\n",
+       "Lat                       69.2167\n",
+       "Lng                         -51.1\n",
+       "Max Temp                    32.02\n",
+       "Humidity                       86\n",
+       "Cloudiness                    100\n",
+       "Wind Speed                   1.14\n",
+       "Name: 13, dtype: object"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index13 = city_data_df.loc[13]\n",
+    "index13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Northern and Southern Hemisphere DataFrames.\n",
+    "northern_hemi_df = city_data_df.loc[(city_data_df[\"Lat\"] >= 0)]\n",
+    "southern_hemi_df = city_data_df.loc[(city_data_df[\"Lat\"] < 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
