--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -208,9 +208,71 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabling notebook extension jupyter-js-widgets/extension...\n",
+      "      - Validating: \u001b[32mOK\u001b[0m\n",
+      "\u001b[33mDEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: gmaps in /usr/local/lib/python3.9/site-packages (0.9.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.0 in /usr/local/lib/python3.9/site-packages (from gmaps) (5.4.0)\n",
+      "Requirement already satisfied: ipython>=5.3.0 in /usr/local/lib/python3.9/site-packages (from gmaps) (8.5.0)\n",
+      "Requirement already satisfied: geojson>=2.0.0 in /usr/local/lib/python3.9/site-packages (from gmaps) (2.5.0)\n",
+      "Requirement already satisfied: six in /usr/local/lib/python3.9/site-packages (from gmaps) (1.12.0)\n",
+      "Requirement already satisfied: ipywidgets>=7.0.0 in /usr/local/lib/python3.9/site-packages (from gmaps) (8.0.2)\n",
+      "Requirement already satisfied: backcall in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (0.2.0)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (2.13.0)\n",
+      "Requirement already satisfied: appnope in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (0.1.3)\n",
+      "Requirement already satisfied: matplotlib-inline in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (0.1.6)\n",
+      "Requirement already satisfied: pickleshare in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (0.7.5)\n",
+      "Requirement already satisfied: stack-data in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (0.5.0)\n",
+      "Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (4.8.0)\n",
+      "Requirement already satisfied: decorator in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (5.1.1)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>3.0.1 in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (3.0.31)\n",
+      "Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.9/site-packages (from ipython>=5.3.0->gmaps) (0.18.1)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0 in /usr/local/lib/python3.9/site-packages (from ipywidgets>=7.0.0->gmaps) (3.0.3)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in /usr/local/lib/python3.9/site-packages (from ipywidgets>=7.0.0->gmaps) (6.15.2)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0 in /usr/local/lib/python3.9/site-packages (from ipywidgets>=7.0.0->gmaps) (4.0.3)\n",
+      "Requirement already satisfied: nest-asyncio in /usr/local/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (1.5.5)\n",
+      "Requirement already satisfied: debugpy>=1.0 in /usr/local/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (1.6.3)\n",
+      "Requirement already satisfied: pyzmq>=17 in /usr/local/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (23.2.1)\n",
+      "Requirement already satisfied: tornado>=6.1 in /usr/local/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (6.2)\n",
+      "Requirement already satisfied: packaging in /usr/local/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (20.9)\n",
+      "Requirement already satisfied: jupyter-client>=6.1.12 in /usr/local/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (7.3.5)\n",
+      "Requirement already satisfied: psutil in /usr/local/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (5.9.2)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /usr/local/lib/python3.9/site-packages (from jedi>=0.16->ipython>=5.3.0->gmaps) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.9/site-packages (from pexpect>4.3->ipython>=5.3.0->gmaps) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /usr/local/lib/python3.9/site-packages (from prompt-toolkit<3.1.0,>3.0.1->ipython>=5.3.0->gmaps) (0.2.5)\n",
+      "Requirement already satisfied: asttokens in /usr/local/lib/python3.9/site-packages (from stack-data->ipython>=5.3.0->gmaps) (2.0.8)\n",
+      "Requirement already satisfied: executing in /usr/local/lib/python3.9/site-packages (from stack-data->ipython>=5.3.0->gmaps) (1.0.0)\n",
+      "Requirement already satisfied: pure-eval in /usr/local/lib/python3.9/site-packages (from stack-data->ipython>=5.3.0->gmaps) (0.2.2)\n",
+      "Requirement already satisfied: jupyter-core>=4.9.2 in /usr/local/lib/python3.9/site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (4.11.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.9/site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (2.8.2)\n",
+      "Requirement already satisfied: entrypoints in /usr/local/lib/python3.9/site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (0.4)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.9/site-packages (from packaging->ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (2.4.7)\n",
+      "\u001b[33mDEPRECATION: Configuring installation scheme with distutils config files is deprecated and will no longer work in the near future. If you are using a Homebrew or Linuxbrew Python, please see discussion at https://github.com/Homebrew/homebrew-core/issues/76621\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2.2 is available.\n",
+      "You should consider upgrading via the '/usr/local/opt/python@3.9/bin/python3.9 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0mEnabling notebook extension jupyter-gmaps/extension...\n",
+      "      - Validating: \u001b[32mOK\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbextension enable --py --sys-prefix widgetsnbextension\n",
+    "!pip install gmaps\n",
+    "!jupyter nbextension enable --py --sys-prefix gmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66f1ca03664745ee9b909a5654aae7e4",
+       "model_id": "bf5756f3097a452dbe0290581b9cc4e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,16 +296,111 @@
     "max_temp = city_data_df[\"Max Temp\"] # an array of length equal to the locations array length\n",
     "\n",
     "# 3. Assign the figure variable to the gmaps.figure() attribute.\n",
-    "fig = gmaps.figure()\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
     "\n",
     "# 4. Assign the heatmap_layer variable to the heatmap_layer attribute and add in the locations.\n",
     "# Assign the heatmap variable.\n",
-    "heat_layer = gmaps.heatmap_layer(locations, weights=[max(temp, 0) for temp in max_temp])\n",
-    "\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=[max(temp, 0) for temp in max_temp], dissipating=False, max_intensity=300, point_radius=4)\n",
     "# 5. Add the heatmap layer.\n",
-    "fig.add_layer(heatmap_layer)\n",
+    "fig.add_layer(heat_layer)\n",
     "\n",
     "# 6. Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e870994d76f44179acbcb573426f1231",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Heatmap of percent humidity\n",
+    "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
+    "humidity = city_data_df[\"Humidity\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eed4191e77dd433a9e36c46ee9598652",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Heatmap of cloudiness\n",
+    "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
+    "clouds = city_data_df[\"Cloudiness\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=clouds, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7493222a55645ea9297c8f41ebc32f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Heatmap of wind speed\n",
+    "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
+    "wind = city_data_df[\"Wind Speed\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=wind, dissipating=False, max_intensity=300, point_radius=4)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Call the figure to plot the data.\n",
     "fig"
    ]
   },
